maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: reassignment to val
    if (random3=y){
               ^